[gd_scene load_steps=15 format=2]

[ext_resource path="res://Resources/sprinimigonormal.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Inimigosnormal.gd" type="Script" id=2]
[ext_resource path="res://Resources/sprinimigodormindo.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "sleep",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 44, 15 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 56.5, 11.5 )

[node name="Inimigo01" type="KinematicBody2D" groups=["i_pulaveis"]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 5 )
frame = 2
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 40 )
shape = SubResource( 6 )

[node name="RayRight" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 2

[node name="RayEsq" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 2

[node name="Bater" type="Area2D" parent="." groups=["i_pulaveis"]]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bater"]
visible = false
self_modulate = Color( 0.380392, 1, 0.376471, 1 )
position = Vector2( 2.5, 10.5 )
shape = SubResource( 7 )

[connection signal="body_entered" from="Bater" to="." method="_on_Area2D_body_entered"]
